# tplink-deco-be85-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  pre-commit.yaml
src/: config.py  main.py
src/api/: __init__.py  schemas.py  service.py
src/deco/: client.py  exceptions.py
src/decoapi/: main.py
src/decoapi/api/: routes.py  schemas.py  service.py
src/decoapi/deco/: __init__.py  crypto.py
tests/: test_crypto.py  test_models.py
