[project]
name = "deco-be85-api"
version = "0.1.0"
description = "FastAPI wrapper around the TP-Link Deco BE85 local API"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "requests>=2.31",
    "pycryptodome>=3.20",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "coverage>=7.14.3",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "coverage>=7.14.3",
    "httpx>=0.27.0",
    "ruff>=0.12",
    "ty>=0.0.1a1",
    "pre-commit>=3.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["C", "E", "F", "I", "N", "NPY", "PD", "UP", "W"]
ignore = ["E203", "E501", "N803"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["api", "config", "deco", "main"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
split-on-trailing-comma = true

[tool.ty.src]
# ty checks the app source. Diagnostic scripts poke at private client internals,
# and tests intentionally exercise pydantic's runtime coercion (passing raw
# strings/dicts), which conflicts with static argument typing.
exclude = ["scripts/", "tests/"]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "unit: Unit tests that don't require external dependencies",
    "integration: Integration tests that may require a live router",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
